--- a/app/assets/stylesheets/freelancers.scss
+++ b/app/assets/stylesheets/freelancers.scss
@@ -47,3 +47,7 @@ footer p {
   background-color: whitesmoke;
 }
 
+#featured-engineers-text{
+  font-size: large;
+}
+
